Remove font cache deletion code

This code was intended to be removed in 2017 and was causing
ProfileHelperTest.OpenNewWindowForProfile browser test to be flaky
on my local machine.

BUG=728144

Review-Url: https://codereview.chromium.org/2913173002
Cr-Commit-Position: refs/heads/master@{#475951}

Former-commit-id: 366c8bf9d9543605d97f63865b38b898876f2d22